# agencia-viagem-usando-sdd

./: .gitignore  Makefile  apm.lock.yaml  apm.yml  docker-compose.yml
.github/agents/: sdd.agent.md
.github/instructions/: sdd-constitution.instructions.md  sdd-design.instructions.md  sdd-requirements.instructions.md
.github/prompts/: atualizar-apm-standards.prompt.md  criar-spec.prompt.md  promover-adr.prompt.md
.sdd/memory-bank/: apm-standards.md  architecture.md  constitution.md  product.md
.sdd/specs/_template/: design.md  requirements.md
.sdd/specs/reserva/: design.md  requirements.md  tasks.md
backend/: Dockerfile  README.md  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/usecase/: create_reservation.go  create_reservation_test.go  (+2 more)
bff/: AGENTS.md  Dockerfile  apm.lock.yaml  apm.yml  pyproject.toml
bff/.agents/skills/sdd-memory-bank/: SKILL.md
bff/.agents/skills/sdd-memory-bank/references/: update-guide.md
bff/.agents/skills/sdd-stack/: SKILL.md
bff/.agents/skills/sdd-workflow/: SKILL.md
bff/.agents/skills/sdd-workflow/references/: workflow.md
bff/.github/instructions/: sdd-memory-bank.instructions.md
bff/.github/prompts/: atualizar-produto.prompt.md  gerar-tasks.prompt.md  init-memory-bank.prompt.md  referenciar-doc.prompt.md  referenciar-repo.prompt.md  revisar-spec.prompt.md
bff/src/: main.py
bff/src/api/routes/: reservations.py
bff/src/core/config/: settings.py
bff/src/infra/http_client/: backend_client.py
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx
(+15 files in other folders)
